activate mod write in apache

--- a/docker/apache/etc/virtualhost.conf
+++ b/docker/apache/etc/virtualhost.conf
@@ -1,9 +1,7 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/html/apimovies/public/
-    ServerName  apimovies.op
-    ServerAlias apimovies.op
+    DocumentRoot "/var/www/html/apimovies/public/"
     ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log 
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
 ##<VirtualHost *:80>
@@ -12,3 +10,5 @@
     ##ErrorLog ${APACHE_LOG_DIR}/error.log
     ##CustomLog ${APACHE_LOG_DIR}/access.log combined
 ##</VirtualHost>
+
+  
